parslers-benchmark/src/tests/invalid/semanticErr/expressions/exprTypeErr.wacc
# expresission type mismatch bool->int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int b = 15 + 6 || 19
end
